--- a/goombasav_cs/Form1.resx
+++ b/goombasav_cs/Form1.resx
@@ -120,4 +120,15 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAQAAEABAAoAQAAFgAAACgAAAAQAAAAIAAAAAEABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAgICAAAD/AAD//wAAAP//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAERERAAAAAAAQAAEAAAAAABAAAQAAAAABEREREAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAwAAAEBERAAAAAAAAAQEAAAAAABAREAAAAAAAERERAAAAAAAQAAEAAAAIABAAAQAAA
+        AAAERERAAAAAAAAAAACAfwAAgH8AAIB/AAAAPwAAAD8AAAA/AAD//wAA3wEAAI8AAADfAAAA3wAAAN8A
+        AADbAAAAwQAAAPsAAAD/AAAA
+</value>
+  </data>
 </root>
